--- a/src/app/componentes/agilidad-aritmetica/agilidad-aritmetica.component.html
+++ b/src/app/componentes/agilidad-aritmetica/agilidad-aritmetica.component.html
@@ -24,9 +24,9 @@
   </li-->
 <div class="container">
   <h1 class="centrado cursiva"> 
-      <img class="img-thumbnail"   src="../assets/imagenes/corriendo.gif" alt="Avatar" style="width:110px">
+      <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/corriendo.gif" alt="Avatar" style="width:110px">
       Velocidad Aritmetica
-      <img class="img-thumbnail"   src="../assets/imagenes/corriendo.gif" alt="Avatar" style="width:110px">
+      <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/corriendo.gif" alt="Avatar" style="width:110px">
     </h1> 
   <form name="juego">
       <ul>
