--- a/src/app/componentes/anagrama/anagrama.component.html
+++ b/src/app/componentes/anagrama/anagrama.component.html
@@ -29,9 +29,9 @@
     </div> -->
     <div class="container">
     <h1 class="centrado cursiva"> 
-        <img class="img-thumbnail"   src="../assets/imagenes/a.gif" alt="Avatar" style="width:110px">
+        <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/a.gif" alt="Avatar" style="width:110px">
         {{nuevoJuego.nombre}}!
-        <img class="img-thumbnail"   src="../assets/imagenes/a.gif" alt="Avatar" style="width:110px">
+        <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/a.gif" alt="Avatar" style="width:110px">
       </h1> 
     <div class="container-fluid text-center">    
       
