--- a/src/app/componentes/cabecera/cabecera.component.css
+++ b/src/app/componentes/cabecera/cabecera.component.css
@@ -2,7 +2,7 @@
 {
     height: 200px;
     
-    background-image: url("/assets/imagenes/fondo.jpg");
+    background-image: url("/TP_LAV4_2017/assets/imagenes/fondo.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
