--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -25,7 +25,7 @@
   <div class="jumbotron" style="padding:50px;">
     <form action="return true;">
       <div class="imgcontainer">
-        <img src="../assets/imagenes/login.png" alt="Avatar" class="avatar" max-width="104" >
+        <img src="/TP_LAV4_2017/assets/imagenes/login.png" alt="Avatar" class="avatar" max-width="104" >
       </div>
 
       <div class="container">
