--- a/src/app/componentes/mi-juego/mi-juego.component.html
+++ b/src/app/componentes/mi-juego/mi-juego.component.html
@@ -35,9 +35,9 @@
             <div class="container">
               <div style="text-align:center">
                  <h1 class="centrado cursiva"> 
-                    <img class="img-thumbnail"   src="../assets/imagenes/adivinanza.gif" alt="Avatar" style="width:110px">
+                    <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/adivinanza.gif" alt="Avatar" style="width:110px">
                     {{nuevoJuego.nombre}}!
-                    <img class="img-thumbnail"   src="../assets/imagenes/adivinanza.gif" alt="Avatar" style="width:110px">
+                    <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/adivinanza.gif" alt="Avatar" style="width:110px">
                   </h1> 
 
                </div>
