--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -20,7 +20,7 @@
           <a routerLink="/Juegos">
             <div class="media">
               <div class="media-left">
-                    <img src="../assets/imagenes/saladej.jpg" class="media-object imagenDeMenu" >
+                    <img src="/TP_LAV4_2017/assets/imagenes/saladej.jpg" class="media-object imagenDeMenu" >
               </div>
               <div class="media-body">
                 <h4 class="media-heading">Juegos</h4>
@@ -34,7 +34,7 @@
             <a routerLink="/Listado">
               <div class="media">
                   <div class="media-left">
-                      <img src="../assets/imagenes/listado.jpg" class="media-object imagenDeMenu" >
+                      <img src="/TP_LAV4_2017/assets/imagenes/listado.jpg" class="media-object imagenDeMenu" >
                     </div>
                 <div class="media-body">
                   <h4 class="media-heading">Listados de resultados</h4>
@@ -48,7 +48,7 @@
           <a routerLink="/Juegos">
             <div class="media">
                 <div class="media-left">
-                    <img src="../assets/imagenes/Configuracion.png" class="media-object imagenDeMenu" >
+                    <img src="/TP_LAV4_2017/assets/imagenes/Configuracion.png" class="media-object imagenDeMenu" >
                   </div>
               <div class="media-body">
                 <h4 class="media-heading">Configuraci&oacute;n</h4>
@@ -65,8 +65,8 @@
       
           <div class="fuente">
               <a routerLink="/Juegos">
-          <div  class="col-sm-4">
-              <img class="img-thumbnail"   src="../assets/imagenes/ruleta.gif" alt="Avatar" style="width:100%">
+          <div  class="col-sm-6">
+              <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/ruleta.gif" alt="Avatar" style="width:100%">
               <h1 class="cursiva" >JUEGOS </h1>
               <p class="title">El método lúdico es un conjunto de estrategias diseñadas para crear un ambiente de armonía en los estudiantes que están inmersos en el proceso de aprendizaje. Este método busca que los alumnos se apropien de los temas impartidos por los docentes utilizando el juego.</p>
             
@@ -83,11 +83,13 @@
 
 <div class="fuente">
     <a routerLink="/ListadoJugador">
-<div  class="col-sm-4">
-    <img class="img-thumbnail"   src="../assets/imagenes/listado.gif" alt="Avatar" style="width:100%">
+<div  class="col-sm-6">
+    <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/listado.gif" alt="Avatar" style="width:100%">
     <h1 class="cursiva" >Listados de Resultados </h1>
+    <br/>
     <p class="title">Los listados de los resultados con ordenamiento y busqueda.</p>
-  
+  <br/>
+ 
 
     <a href="#"><i class="fa fa-dribbble"></i></a> 
     <a href="#"><i class="fa fa-twitter"></i></a> 
