--- a/src/app/componentes/listadojugador/listadojugador.component.css
+++ b/src/app/componentes/listadojugador/listadojugador.component.css
@@ -9,13 +9,21 @@
     align-content: center;
     align-items: center;
     align-self: auto;
-    color: white;
-    font-size: 20px;
+    color: #D4CACA;
+    font-size: 15px;
     
   }
+  .table{
+    color: white;
+   /* font-family: 'Rye', cursive;*/
+  }
   .cursiva{
-    font-family: 'Rye', cursive;;
+    font-family: 'Rye', cursive;
   }
   .verde{
     color: green;
+  }
+  .negro{
+      color:black;
+      font-family: 'New Rocker', cursive;
   }
