--- a/src/app/componentes/listadojugador/listadojugador.component.html
+++ b/src/app/componentes/listadojugador/listadojugador.component.html
@@ -1,11 +1,12 @@
-<ul class="nav nav-pills nav-justified">
+<link href="https://fonts.googleapis.com/css?family=Faster+One|New+Rocker|Open+Sans|Rye|Shrikhand|Yellowtail" rel="stylesheet">
+<ul class="nav nav-pills nav-justified negro">
   <li class="active"><a routerLink="/Principal">Sala de Juegos</a></li>
-  <li><a (click)="SmarTable()">Smart Table</a></li>
-  <li><a (click)="Show()">Tabla de Todos los usuarios</a></li>
-  <li><a (click)="filtTrue()">Tabla de Ganadores</a></li>
-  <li><a (click)="filtFalse()">Tabla de Perdedores</a></li>
+  <li><a class="negro" (click)="SmarTable()">Smart Table</a></li>
+  <li><a class="negro" (click)="Show()">Tabla de Todos los usuarios</a></li>
+  <li><a class="negro" (click)="filtTrue()">Tabla de Ganadores</a></li>
+  <li><a class="negro" (click)="filtFalse()">Tabla de Perdedores</a></li>
 </ul>
-
+<br/>
 
 
 <div  class="container"  >
@@ -15,7 +16,7 @@
       <button class="btn" (click)="filtTrue()">Gano</button>
       <button class="btn" (click)=filtFalse()>Perdio</button>
   </div-->
-  <table class="table" [hidden]="mostrar">
+  <table class="table " [hidden]="mostrar">
       <thead>
         
         <th>Jugador</th>
@@ -34,7 +35,7 @@
         <td>{{us.sexo | sexo}}</td>
         <td>{{us.juego}}</td>
         <td>{{us.puntaje}}</td>
-        <td>{{us.gano}}</td>
+        <td>{{us.gano | gano}}</td>
         
       </tbody>
     </table>
@@ -59,7 +60,7 @@
         <td>{{us.sexo  | sexo }}</td>
         <td>{{us.juego}}</td>    
         <td>{{us.puntaje}}</td>
-        <td>{{us.gano}}</td>
+        <td>{{us.gano | gano}}</td>
         
       </tbody>
     </table>
