--- a/src/app/componentes/menu-card/menu-card.component.html
+++ b/src/app/componentes/menu-card/menu-card.component.html
@@ -4,7 +4,7 @@
   <div  >
     
   <div class="card ">
-      <img class="img-thumbnail"   src="../assets/imagenes/pensando.gif" alt="Avatar" style="width:100%">
+      <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/pensando.gif" alt="Avatar" style="width:100%">
       <h1 class="cursiva" >Velocidad y agilidad aritmética </h1>
       <p class="title">Juego de agilidad mental</p>
       <p>UTN FRA </p>
@@ -18,8 +18,10 @@
     </div>
   
     <div class="card">
-      <img class="img-thumbnail" src="../assets/imagenes/ppt2.gif" alt="Avatar" style="width:100%">
+      <img class="img-thumbnail" src="/TP_LAV4_2017/assets/imagenes/ppt2.gif" alt="Avatar" style="width:100%">
       <h1 class="cursiva" >Piedra Papel  o Tijera</h1>
+      <br/>
+      <br/>
       <p class="title">Juega contra la máquina</p>
       <p>UTN FRA </p>
       
@@ -30,7 +32,7 @@
       <p>           <button class="button"  (click)="Juego('PPT')">Jugar</button></p>
     </div>
     <div class="card">
-      <img  class="img-thumbnail"  src="../assets/imagenes/adivina.gif" alt="Avatar" style="width:100%">
+      <img  class="img-thumbnail"  src="/TP_LAV4_2017/assets/imagenes/adivina.gif" alt="Avatar" style="width:100%">
       <h1 class="cursiva">Adivina el número secreto</h1>
       <p class="title">Juego de estrategia</p>
       <p>UTN FRA </p>
@@ -43,8 +45,10 @@
     </div>
 
     <div class="card">
-      <img  class="img-thumbnail"  src="../assets/imagenes/anagrama.gif" alt="Avatar" style="width:100%">
+      <img  class="img-thumbnail"  src="/TP_LAV4_2017/assets/imagenes/anagrama.gif" alt="Avatar" style="width:100%">
       <h1 class="cursiva">Anagrama</h1>
+      <br/>
+      <br/>
       <p class="title">Ordena la palabra</p>
       <p>UTN FRA </p>
       
@@ -56,7 +60,7 @@
     </div>
 
     <div class="card">
-        <img  class="img-thumbnail"  src="../assets/imagenes/adivinanza.gif" alt="Avatar" style="width:100%">
+        <img  class="img-thumbnail"  src="/TP_LAV4_2017/assets/imagenes/adivinanza.gif" alt="Avatar" style="width:100%">
         <h1 class="cursiva">Adivinanza y Acertijos</h1>
         <p class="title">Juego de velocidad</p>
         <p>UTN FRA </p>
