--- a/src/app/componentes/quien-soy/quien-soy.component.css
+++ b/src/app/componentes/quien-soy/quien-soy.component.css
@@ -10,7 +10,7 @@ body {
 p {font-size: 16px;}
 .margin {margin-bottom: 45px;}
 .bg-1 { 
-    background-color: #1abc9c; /* Green */
+    background-color: #04382E; /* Green */
     color: #ffffff;
 }
 .bg-2 { 
