--- a/src/app/componentes/quien-soy/quien-soy.component.html
+++ b/src/app/componentes/quien-soy/quien-soy.component.html
@@ -21,7 +21,7 @@
   <!-- First Container -->
   <div id ="quiwn"class="container-fluid bg-1 text-center">
     <h3 class="margin">Quién Soy?</h3>
-    <img src="/assets/imagenes/yo.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+    <img src="/TP_LAV4_2017/assets/imagenes/yo.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
     <h3>Vanesa Montecinos</h3>
   </div>
   
@@ -31,7 +31,7 @@
     <h3 class="margin">Adivinanza y Acertijos</h3>
 
     <div  class="col-sm-4">
-        <img class="img-thumbnail"   src="../assets/imagenes/acertijo.gif" alt="Avatar" style="width:100%">
+        <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/acertijo.gif" alt="Avatar" style="width:100%">
     </div>
     <p>El juego va mostrar una imagen en pantalla. Esta imagen puede estar relacionada al nombre de una pelicula,
        al nombre de un actor o puede ser un acertijo matematico. Una vez que comienza el juego se tendra 15 segundos para completar 
@@ -49,15 +49,15 @@
     <div class="row">
       <div class="col-sm-4">
         <p>Con las tecnologias WEB que permiten desarrollar aplicaciones multiplataforma</p>
-        <img src="/assets/imagenes/quiensoy1.png" class="img-responsive margin imagenDeQuienSoy"  alt="Image">
+        <img src="/TP_LAV4_2017/assets/imagenes/quiensoy1.png" class="img-responsive margin imagenDeQuienSoy"  alt="Image">
       </div>
       <div class="col-sm-4"> 
         <p>Principalmente orientada a la experiencia del usuario, garantizando que su funcionamieto sea fluido y pensado en el comportamiento del usuario y en la funcionalidad.</p>
-        <img src="/assets/imagenes/quiensoy2.jpg" class="img-responsive margin imagenDeQuienSoy" alt="Image">
+        <img src="/TP_LAV4_2017/assets/imagenes/quiensoy2.jpg" class="img-responsive margin imagenDeQuienSoy" alt="Image">
       </div>
       <div class="col-sm-4"> 
         <p>Para los sistemas operativos lideres en el mercado del consumo masivo</p>
-        <img src="/assets/imagenes/quiensoy3.png" class="img-responsive margin imagenDeQuienSoy" alt="Image">
+        <img src="/TP_LAV4_2017/assets/imagenes/quiensoy3.png" class="img-responsive margin imagenDeQuienSoy" alt="Image">
       </div>
     </div>
   </div>
