--- a/src/app/componentes/adivina-mas-listado/adivina-mas-listado.component.html
+++ b/src/app/componentes/adivina-mas-listado/adivina-mas-listado.component.html
@@ -1,6 +1,7 @@
 
 <app-adivina-el-numero (enviarJuego)="tomarJuegoTerminado($event)">   </app-adivina-el-numero> 
-
+<div class="container">
 <h1 class="blanco"> Listado de resultados</h1>
 <app-listado-de-resultados [listado]="listadoParaCompartir"> </app-listado-de-resultados>
 
+</div>
