--- a/src/app/componentes/menu-card/menu-card.component.html
+++ b/src/app/componentes/menu-card/menu-card.component.html
@@ -1,10 +1,11 @@
 
 <link href="https://fonts.googleapis.com/css?family=Rozha+One" rel="stylesheet"><div class="container" >
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rye|Shrikhand|Yellowtail" rel="stylesheet">
-  <div  >
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+    <div  >
     
   <div class="card ">
-      <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/pensando.gif" alt="Avatar" style="width:100%">
+      <img class="img-thumbnail"   src="/assets/imagenes/pensando.gif" alt="Avatar" style="width:100%">
       <h1 class="cursiva" >Velocidad y agilidad aritmética </h1>
       <p class="title">Juego de agilidad mental</p>
       <p>UTN FRA </p>
@@ -13,12 +14,12 @@
       <a href="#"><i class="fa fa-twitter"></i></a> 
       <a href="#"><i class="fa fa-linkedin"></i></a> 
       <a href="#"><i class="fa fa-facebook"></i></a> 
-      <p>           <button class="button"  (click)="Juego('Agilidad')">Jugar</button></p>
+      <p>           <button class="button fuenteBoton"  (click)="Juego('Agilidad')">Jugar</button></p>
     
     </div>
   
     <div class="card">
-      <img class="img-thumbnail" src="/TP_LAV4_2017/assets/imagenes/ppt2.gif" alt="Avatar" style="width:100%">
+      <img class="img-thumbnail" src="/assets/imagenes/ppt2.gif" alt="Avatar" style="width:100%">
       <h1 class="cursiva" >Piedra Papel  o Tijera</h1>
       <br/>
       <br/>
@@ -29,10 +30,10 @@
       <a href="#"><i class="fa fa-twitter"></i></a> 
       <a href="#"><i class="fa fa-linkedin"></i></a> 
       <a href="#"><i class="fa fa-facebook"></i></a> 
-      <p>           <button class="button"  (click)="Juego('PPT')">Jugar</button></p>
+      <p>           <button class="button fuenteBoton"  (click)="Juego('PPT')">Jugar</button></p>
     </div>
     <div class="card">
-      <img  class="img-thumbnail"  src="/TP_LAV4_2017/assets/imagenes/adivina.gif" alt="Avatar" style="width:100%">
+      <img  class="img-thumbnail"  src="/assets/imagenes/adivina.gif" alt="Avatar" style="width:100%">
       <h1 class="cursiva">Adivina el número secreto</h1>
       <p class="title">Juego de estrategia</p>
       <br/>
@@ -43,11 +44,11 @@
       <a href="#"><i class="fa fa-twitter"></i></a> 
       <a href="#"><i class="fa fa-linkedin"></i></a> 
       <a href="#"><i class="fa fa-facebook"></i></a> 
-      <p>           <button class="button"  (click)="Juego('Adivina')">Jugar</button></p>
+      <p>           <button class="button fuenteBoton"  (click)="Juego('Adivina')">Jugar</button></p>
     </div>
 
     <div class="card">
-      <img  class="img-thumbnail"  src="/TP_LAV4_2017/assets/imagenes/anagrama.gif" alt="Avatar" style="width:100%">
+      <img  class="img-thumbnail"  src="/assets/imagenes/anagrama.gif" alt="Avatar" style="width:100%">
       <h1 class="cursiva">Anagrama</h1>
       <br/>
       <br/>
@@ -58,12 +59,12 @@
       <a href="#"><i class="fa fa-twitter"></i></a> 
       <a href="#"><i class="fa fa-linkedin"></i></a> 
       <a href="#"><i class="fa fa-facebook"></i></a> 
-      <p>           <button class="button"  (click)="Juego('Anagrama')">Jugar</button></p>
+      <p>           <button class="button fuenteBoton"  (click)="Juego('Anagrama')">Jugar</button></p>
     </div>
 
     <div class="card">
-        <img  class="img-thumbnail"  src="/TP_LAV4_2017/assets/imagenes/adivinanza.gif" alt="Avatar" style="width:100%">
-        <h1 class="cursiva">Adivinanza y Acertijos</h1>
+        <img  class="img-thumbnail"  src="/assets/imagenes/adivinanza.gif" alt="Avatar" style="width:100%">
+        <h1 class="cursiva">Adivina La pelicula</h1>
         <p class="title">Juego de velocidad</p>
         <p>UTN FRA </p>
         
@@ -71,7 +72,21 @@
         <a href="#"><i class="fa fa-twitter"></i></a> 
         <a href="#"><i class="fa fa-linkedin"></i></a> 
         <a href="#"><i class="fa fa-facebook"></i></a> 
-        <p>           <button class="button"  (click)="Juego('miJuego')">Jugar</button></p>
+        <p>           <button class="button fuenteBoton"  (click)="Juego('miJuego')">Jugar</button></p>
+      </div>
+
+      <div class="card">
+        <img  class="img-thumbnail"  src="/assets/imagenes/tateti.gif" alt="Avatar" style="width:100%">
+        <h1 class="cursiva">TATETI</h1>
+        <p class="title">Juego de estrategia</p>
+        <p class="title">Multijugador</p>
+        <p>UTN FRA </p>
+        
+        <a href="#"><i class="fa fa-dribbble"></i></a> 
+        <a href="#"><i class="fa fa-twitter"></i></a> 
+        <a href="#"><i class="fa fa-linkedin"></i></a> 
+        <a href="#"><i class="fa fa-facebook"></i></a> 
+        <p>           <button class="button fuenteBoton"  (click)="Juego('Tateti')">Jugar</button></p>
       </div>
   </div>
 </div>
