--- a/src/app/componentes/piedrapapeltijera/piedrapapeltijera.component.html
+++ b/src/app/componentes/piedrapapeltijera/piedrapapeltijera.component.html
@@ -1,9 +1,9 @@
 
  <div class="container">
  <h1 class="centrado fuente"> 
-    <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/ppt3.gif" alt="Avatar" style="width:110px">
+    <img class="img-thumbnail"   src="/assets/imagenes/ppt3.gif" alt="Avatar" style="width:110px">
    ¿ Piedra papel o tijera?
-    <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/ppt3.gif" alt="Avatar" style="width:110px">
+    <img class="img-thumbnail"   src="/assets/imagenes/ppt3.gif" alt="Avatar" style="width:110px">
   </h1> 
 <body >
 
@@ -19,15 +19,15 @@
     <button class="button"  (click)="piedra()">Jugar</button-->
     <button  block width="80px" 
     (click)=piedra()>
-    <img src="/TP_LAV4_2017/assets/imagenes/piedra.jpg" height="300" width="200">
+    <img src="/assets/imagenes/piedra.jpg" height="300" width="200">
       </button>
       <button  block width="80px" 
       (click)=papel()>
-      <img src="/TP_LAV4_2017/assets/imagenes/papel.jpg" height="300" width="200">
+      <img src="/assets/imagenes/papel.jpg" height="300" width="200">
         </button>
         <button  block width="80px" 
         (click)=tijera()>
-        <img src="/TP_LAV4_2017/assets/imagenes/tijera.jpg" height="300" width="200">
+        <img src="/assets/imagenes/tijera.jpg" height="300" width="200">
           </button>
   
   </div>
