--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -66,7 +66,7 @@
           <div class="fuente">
               <a routerLink="/Juegos">
           <div  class="col-sm-6">
-              <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/ruleta.gif" alt="Avatar" style="width:100%">
+              <img class="img-thumbnail"   src="/assets/imagenes/ruleta.gif" alt="Avatar" style="width:100%">
               <h1 class="cursiva" >JUEGOS </h1>
               <p class="title">El método lúdico es un conjunto de estrategias diseñadas para crear un ambiente de armonía en los estudiantes que están inmersos en el proceso de aprendizaje. Este método busca que los alumnos se apropien de los temas impartidos por los docentes utilizando el juego.</p>
             
@@ -84,7 +84,7 @@
 <div class="fuente">
     <a routerLink="/ListadoJugador">
 <div  class="col-sm-6">
-    <img class="img-thumbnail"   src="/TP_LAV4_2017/assets/imagenes/listado.gif" alt="Avatar" style="width:100%">
+    <img class="img-thumbnail"   src="/assets/imagenes/listado.gif" alt="Avatar" style="width:100%">
     <h1 class="cursiva" >Listados de Resultados </h1>
     <br/>
     <p class="title">Los listados de los resultados con ordenamiento y busqueda.</p>
