--- a/src/app/componentes/agilidad-mas-listado/agilidad-mas-listado.component.html
+++ b/src/app/componentes/agilidad-mas-listado/agilidad-mas-listado.component.html
@@ -1,4 +1,9 @@
 
+
 <app-agilidad-aritmetica (enviarJuego)="tomarJuegoTerminado($event)">   </app-agilidad-aritmetica> 
-<h1 class="blanco"> Listado de Resultados </h1>
+<div class="container">
+
+
+<h1 class='blanco'> Listado de Resultados </h1>
 <app-listado-de-resultados [listado]="listadoParaCompartir"> </app-listado-de-resultados>
+</div>
