--- a/src/app/componentes/cabecera/cabecera.component.html
+++ b/src/app/componentes/cabecera/cabecera.component.html
@@ -1,14 +1,15 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rye|Shrikhand|Yellowtail" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
 
  <div class="panel panel-default">
   <div class="hero-text fuente">
       <h1 class=" cursiva" style="font-size:50px">Sala de Juegos</h1>
       <p>Vanesa Montecinos</p>
-      <a href="https://github.com/vanesamontecinos"target="_blank">en GitHub <i class="fa fa-github"></i></a>
-      <a  routerLink="/QuienSoy" >Quien Soy? <i class="fa fa-user"></i></a>
+      <a class="b" href="https://github.com/vanesamontecinos"target="_blank">en GitHub <i class="fa fa-github"></i></a>
+      <a class="b" routerLink="/QuienSoy" >Quien Soy? <i class="fa fa-user"></i></a>
   </div>
-  <ul class="nav navbar-nav navbar-right">
+  <!--ul class="nav navbar-nav navbar-right">
           <li><a routerLink="/Registro"><span class="glyphicon glyphicon-user"></span>Registrarse</a></li>
           <li><a  routerLink="/Login"><span class="glyphicon glyphicon-log-in"></span> Ingresar</a></li>
-  </ul>
+  </ul-->
 </div>
