--- a/src/app/componentes/juegos/juegos.component.html
+++ b/src/app/componentes/juegos/juegos.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rye|Shrikhand|Yellowtail" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
 <app-menu></app-menu>
 <div style="text-align:center">
   <h1 class="fuente">
