--- a/src/app/componentes/menu-card/menu-card.component.css
+++ b/src/app/componentes/menu-card/menu-card.component.css
@@ -31,6 +31,10 @@ img {
   font-family: 'Rye', cursive;;
 }
 
+.fuenteBoton{
+  font-family: 'Berkshire Swash', cursive;
+}
+
 .button{
     margin-left: 1px;
     display: inline-block;
@@ -41,10 +45,10 @@ img {
     cursor: pointer;
     outline: none;
     color: #fff;
-    background-color: #4CAF50;
+    background-color: rgb(9, 34, 10);
     border: none;
     border-radius: 15px;
-    box-shadow: 0 9px #999;
+    box-shadow: 0 9px rgb(0, 0, 0);
 
     border: none;
     outline: 0;
