--- a/src/app/componentes/registro/registro.component.css
+++ b/src/app/componentes/registro/registro.component.css
@@ -15,12 +15,17 @@ button {
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: 100%;
+   
+    border-radius: 15px;
 }
 
+.blanco{
+    color: #DFD7D7;
+    background-color: black;
+}
 /* Extra styles for the cancel button */
 .cancelbtn {
-    padding: 14px 20px;
+   
     background-color: #f44336;
 }
 
@@ -30,6 +35,8 @@ button {
 /* Add padding to container elements */
 .container {
     padding: 16px;
+    color: #070606;
+    background-color: #434AA5;
 }
 
 /* The Modal (background) */
